// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestFundingForm Should render empty form 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gUwRxV"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 clLqce"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Funder
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <button
                  aria-label="Open Drop"
                  className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  type="button"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 erazuK"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 XINUX"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select"
                          readOnly={true}
                          size="medium"
                          tabIndex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      className="StyledBox-sc-13pk1d4-0 eLQtUu"
                      style={
                        Object {
                          "minWidth": "auto",
                        }
                      }
                    >
                      <svg
                        aria-label="FormDown"
                        className="StyledIcon-ofa7kd-0 dSllCE"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          strokeWidth="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 Tiesv"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Invoice amount
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      value={0}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Currency
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      name="currency"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSqAcB"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment amount, 
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                    name="repayment_amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={0}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                APR, %
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="apr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={5}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Finance fee, 
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="NaN"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment amount, 
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="0.00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-06-20"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment due date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="repayment_due_date"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
        </div>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 kBooLY"
    >
      <button
        className="StyledButton-sc-323bzc-0 kHrfdt"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Discard
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
      />
      <button
        className="StyledButton-sc-323bzc-0 aNlbA"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="submit"
      >
        Request
      </button>
    </div>
  </form>
</div>
`;

exports[`RequestFundingForm Should render form with sender default values and correctly calculate the computed values 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gUwRxV"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 clLqce"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Funder
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <button
                  aria-label="Open Drop"
                  className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  type="button"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 erazuK"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 XINUX"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select"
                          readOnly={true}
                          size="medium"
                          tabIndex="-1"
                          type="text"
                          value="Alice"
                        />
                      </div>
                    </div>
                    <div
                      className="StyledBox-sc-13pk1d4-0 eLQtUu"
                      style={
                        Object {
                          "minWidth": "auto",
                        }
                      }
                    >
                      <svg
                        aria-label="FormDown"
                        className="StyledIcon-ofa7kd-0 dSllCE"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          strokeWidth="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 Tiesv"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Invoice amount
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Currency
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      name="currency"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      value="USD"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSqAcB"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                    name="repayment_amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={1005}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                APR, %
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="apr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={5}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Finance fee, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="13.82"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="991.18"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-06-05"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment due date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="repayment_due_date"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-07-02"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
        </div>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 kBooLY"
    >
      <button
        className="StyledButton-sc-323bzc-0 kHrfdt"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Discard
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
      />
      <button
        className="StyledButton-sc-323bzc-0 aNlbA"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="submit"
      >
        Request
      </button>
    </div>
  </form>
</div>
`;

exports[`RequestFundingForm Should render form with sender default values and correctly calculate the computed values for days 31, apr 5% and fee 0% 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gUwRxV"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 clLqce"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Funder
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <button
                  aria-label="Open Drop"
                  className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  type="button"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 erazuK"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 XINUX"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select"
                          readOnly={true}
                          size="medium"
                          tabIndex="-1"
                          type="text"
                          value="Alice"
                        />
                      </div>
                    </div>
                    <div
                      className="StyledBox-sc-13pk1d4-0 eLQtUu"
                      style={
                        Object {
                          "minWidth": "auto",
                        }
                      }
                    >
                      <svg
                        aria-label="FormDown"
                        className="StyledIcon-ofa7kd-0 dSllCE"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          strokeWidth="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 Tiesv"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Invoice amount
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Currency
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      name="currency"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      value="USD"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSqAcB"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                    name="repayment_amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={1000}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                APR, %
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="apr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={5}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Finance fee, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="4.17"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="995.83"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-06-05"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment due date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="repayment_due_date"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-07-05"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
        </div>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 kBooLY"
    >
      <button
        className="StyledButton-sc-323bzc-0 kHrfdt"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Discard
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
      />
      <button
        className="StyledButton-sc-323bzc-0 aNlbA"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="submit"
      >
        Request
      </button>
    </div>
  </form>
</div>
`;

exports[`RequestFundingForm Should render form with sender default values and correctly calculate the computed values for days 31, apr 5% and fee 1% 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 gUwRxV"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 clLqce"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Funder
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <button
                  aria-label="Open Drop"
                  className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  type="button"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 erazuK"
                  >
                    <div
                      className="StyledBox-sc-13pk1d4-0 XINUX"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select"
                          readOnly={true}
                          size="medium"
                          tabIndex="-1"
                          type="text"
                          value="Alice"
                        />
                      </div>
                    </div>
                    <div
                      className="StyledBox-sc-13pk1d4-0 eLQtUu"
                      style={
                        Object {
                          "minWidth": "auto",
                        }
                      }
                    >
                      <svg
                        aria-label="FormDown"
                        className="StyledIcon-ofa7kd-0 dSllCE"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          strokeWidth="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 Tiesv"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Invoice amount
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 clLqce"
            >
              <div
                className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
              >
                <label
                  className="StyledText-sc-1sadyjn-0 bKLvLm"
                >
                  Currency
                </label>
                <div
                  className="StyledBox-sc-13pk1d4-0 gZSidW"
                >
                  <div
                    className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                  >
                    <input
                      autoComplete="off"
                      className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                      disabled={true}
                      name="currency"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      value="USD"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 fSqAcB"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                    name="repayment_amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={1000}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                APR, %
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="apr"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value={5}
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Finance fee, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="14.17"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment amount, USD
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="amount"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    value="985.83"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 ffeAql"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Early payment date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-06-05"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <label
                className="StyledText-sc-1sadyjn-0 bKLvLm"
              >
                Repayment due date
              </label>
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <div
                  className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                >
                  <input
                    autoComplete="off"
                    className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                    disabled={true}
                    name="repayment_due_date"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    type="date"
                    value="2019-07-05"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 dRJqWv"
          />
        </div>
      </div>
    </div>
    <div
      className="StyledBox-sc-13pk1d4-0 kBooLY"
    >
      <button
        className="StyledButton-sc-323bzc-0 kHrfdt"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Discard
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
      />
      <button
        className="StyledButton-sc-323bzc-0 aNlbA"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="submit"
      >
        Request
      </button>
    </div>
  </form>
</div>
`;
